--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,11 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
+#mapContainer{
+  margin-left:50px;
+}
+
+
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #555;
@@ -73,4 +78,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
+}
+
+#tooltip {
+  min-height: 30px;
+  min-width: 50px;
+  color: whitesmoke;
+  background-color: black;
+
 }
