--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,10 @@
-  <div class="jumbotron" id="map container" style="position: relative">
+  <div class="jumbotron" id="bodycontainer" style="position: relative">
     <h1>Map in Angular</h1>
-
     
   <div class="container" id="mapContainer">
-    <p>Globe icon:     
-      <i class="fas fa-map-marker-alt"></i>      
-    </p>
-
-
     <!--Map image-->
     <img (click)="logCursorPosition($event)" id="map" src="../assets/img/USA.jpg" width="960" height="540" >
   </div>
-
-
 
 <!--form appears on marker placement-->
 <div class="form-popup" id="myForm">
@@ -23,3 +15,5 @@
     <button type="button" class="btn delete btn-sm">Delete</button>
   </form>
 </div>
+
+
